overflow x solved

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css');
 
-body{ font-family: 'Work Sans', sans-serif; color: #4f4f4f; line-height: 1.2 }
+body{ font-family: 'Work Sans', sans-serif; color: #4f4f4f; line-height: 1.2; overflow-x: hidden }
 
 .full-height { height: 100vh; background: #1b252f }
 
@@ -64,4 +64,4 @@ ol{margin-left: -20px}
 .offering:nth-child(3), .offering:nth-child(5) {border-top-right-radius: 50px; border-bottom-right-radius: 50px}
 
 .p-details{position: relative;}
-.p-details span{width:100%; position: absolute; left: 30px; top: 10px}
+.p-details span{position: absolute; left: 145px; top: 22px; z-index: 2}
